--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,13 +1,13 @@
 ---
 name: Checks
 env:
-  DEFAULT_KHIOPS_PYTHON_VERSION: 10.7.3.0a.0
+  DEFAULT_KHIOPS_PYTHON_VERSION: 11.0.0.0b.0
 on:
   pull_request:
   workflow_dispatch:
     inputs:
       khiops-python-version:
-        default: 10.6.0.0a.0
+        default: 11.0.0.0b.0
         description: Version of the khiops Conda package
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
